versioned_docs/version-4.0.2/系统维护指南/数据备份和还原.md

import useBaseUrl from '@docusaurus/useBaseUrl';

## PGSQL数据库

#### 备份

* 打开pgAdmin，在弹出的网页上登录；
* 右击待备份的数据库，在弹出的菜单上点击`Backup`；

    <img alt=" " src={useBaseUrl('docimg/backup-menu.png')} />

* 在备份会话框内输入信息

    <img alt=" " src={useBaseUrl('docimg/backup-dialog.png')} />

    * Filename 输入完整路径和备件文件名，可通过右侧按钮选择路径；
    * Encoding 编码格式，请选择`UTF-8`；
* 点击按钮`Backup`开始备份，右下角弹出备份进度信息框。

    <img alt=" " src={useBaseUrl('docimg/backup-success.png')} />

#### 还原
* 右击需要还原的目标数据库，在弹出的菜单上点击`Restore`；

    <img alt=" " src={useBaseUrl('docimg/restore-menu.png')} />

* 在还原会话框内输入信息

    <img alt=" " src={useBaseUrl('docimg/restore-dialog.png')} />

    * Filename 输入已备份好的文件路径和名称，可通过右侧按钮选择（注意文件格式"Format"的筛选）；
    * Role name 角色名，请选择`postgres`；
* 点击按钮`Resore`开始还原，右下角弹出还原进度信息框。

#### 查询
*  选中数据库（或数据库下的节点），点击`Tools`菜单，点击`Query Tool`

    <img alt=" " src={useBaseUrl('docimg/query-tool.png')} />

*  在新增的面板中输入查询语句，点击执行（闪电形状的按钮），下方将显示查询结果

    <img alt=" " src={useBaseUrl('docimg/query-panel.png')} />

    * PGsql的语法与SQL server有些不同，参考<http://www.postgres.cn/docs/10/sql.html>


#### 远程访问设置
配置文件位于安装目录`C:\Program Files\PostgreSQL\12\data`下，**pg_hba.conf**和**postgresql.conf**

* **pg_hba.conf**，配置数据库的访问权限
    在图示位置增加允许访问的IP: `host    all             all             10.1.1.0/24            md5`，其中`24`是子网掩码，表示允许IP地址在`10.1.1.0`~`10.1.1.255`内的计算机访问。

    <img alt=" " src={useBaseUrl('docimg/connect-setting.png')} />

* **postgresql.conf**，配置数据库的访问权限
    在文件中确认`listen_addresses = '*'`，并且未被`#`注释。
    
    <img alt=" " src={useBaseUrl('docimg/connect-auth.png')} />

## SqlServer2008

#### 手动备份
* 点击 “开始”–“所有程序”–“Microsoft SQL Server 2008”–“启动SQL Server Management Studio”登录数据库。如下图：  

<img alt=" " src={useBaseUrl('docimg/sql手动备份1.png')} />

<img alt=" " src={useBaseUrl('docimg/sql手动备份2.png')} />

* 展开数据库列表，选择要备份的数据库，然后单击右键，在弹出的快捷菜单中选择 “任务”–“备份”，如下图：

<img alt=" " src={useBaseUrl('docimg/sql手动备份3.png')} />

* 在弹出的“备份数据库”对话框中设置备份的参数。
先在“数据库”列表中选择要备份的数据库，在“备份类型”列表中选择采用的备份类型（默认为完整备份），之后单击“添加”按钮，添加备份文件的输出路径。如下图：

<img alt=" " src={useBaseUrl('docimg/sql手动备份4.png')} />

* 如果在“目标”列表中有输出文件列表，请将其选中后，单击“删除”按钮，将其删除掉。之后再点击“添加”按钮，重新添加输出路径。如下图：

<img alt=" " src={useBaseUrl('docimg/sql手动备份5.png')} />

<img alt=" " src={useBaseUrl('docimg/sql手动备份6.png')} />

* 单击“添加”按钮后，在弹出的“选择备份目标”对话框中选择备份文件的输出路径。如下图：

<img alt=" " src={useBaseUrl('docimg/sql手动备份7.png')} />

<img alt=" " src={useBaseUrl('docimg/sql手动备份8.png')} />

<img alt=" " src={useBaseUrl('docimg/sql手动备份9.png')} />

* 输入文件名（XXXXX.bak）后，单击“确定”按钮

<img alt=" " src={useBaseUrl('docimg/sql手动备份10.png')} />

<img alt=" " src={useBaseUrl('docimg/sql手动备份11.png')} />

* 单击“确定”按钮后程序执行备份操作，备份完成后会弹出完成的对话框。如下图：

<img alt=" " src={useBaseUrl('docimg/sql手动备份12.png')} />

* 单击“确定”按钮后，对话框关闭，备份结束。在指定的输出路径下会生成指定名称的备份文件。如下图：

<img alt=" " src={useBaseUrl('docimg/sql手动备份13.png')} />

#### 定时备份

定时备份采用在数据库维护计划中新建备份计划来完成。首先需要启动SQL Server Agent服务，这个服务如果不启动是无法运行新建作业的。
* 启动SQL Server代理（SQL Server Agent）服务，在计算机图标上单击右键，在弹出的快捷菜单中选择“管理”，如下图：  

<img alt=" " src={useBaseUrl('docimg/sql定时备份1.png')} />

* 在弹出的“计算机管理”对话框中，单击“服务”，在服务列表中选择要开启的服务，然后双击。

<img alt=" " src={useBaseUrl('docimg/sql定时备份2.png')} />

* 双击后会弹出服务“属性”对话框。将服务的“启动类型”选择为“自动”，然后单击“启动”按钮，待服务启动后，单击“确定”按钮保存设置。如下图：  

<img alt=" " src={useBaseUrl('docimg/sql定时备份3.png')} />

* 点击“开始”–“所有程序”–“Microsoft SQL Server 2008”–“启动SQL Server Management Studio”登录数据库，如下图：  

<img alt=" " src={useBaseUrl('docimg/sql定时备份4.png')} />

<img alt=" " src={useBaseUrl('docimg/sql定时备份5.png')} />

* 登录后，双击展开“管理”目录，在“维护计划”上单击右键，如下图：

<img alt=" " src={useBaseUrl('docimg/sql定时备份6.png')} />

<img alt=" " src={useBaseUrl('docimg/sql定时备份7.png')} />

* 单击“下一步”，在“选择计划属性”对话框中输入计划名称等信息后，单击“下一步”，如下图：

<img alt=" " src={useBaseUrl('docimg/sql定时备份8.png')} />
* 选择“备份数据库(完整)”，然后单击“下一步”，如下图：
<img alt=" " src={useBaseUrl('docimg/sql定时备份9.png')} />
<img alt=" " src={useBaseUrl('docimg/sql定时备份10.png')} />
* 在弹出的 定义“备份数据库(完整)”任务 对话框中，先选择要备份的数据库，如下图：
<img alt=" " src={useBaseUrl('docimg/sql定时备份11.png')} />
* 选择完备份的数据库后，选择文件的输出路径，如下图：
<img alt=" " src={useBaseUrl('docimg/sql定时备份12.png')} />
<img alt=" " src={useBaseUrl('docimg/sql定时备份13.png')} />
* 选择完输出路径后，单击计划区域内的“更改”按钮，设置作业计划属性，如下图：
<img alt=" " src={useBaseUrl('docimg/sql定时备份14.png')} />
* 在弹出的“作业计划属性”对话框中，设置相应的属性，设置完属性后，单击“确定”按钮。如下图：
<img alt=" " src={useBaseUrl('docimg/sql定时备份15.png')} />
<img alt=" " src={useBaseUrl('docimg/sql定时备份16.png')} />
* 属性设置完后，单击“下一步”，在弹出的“选择报告选项”对话框中，选择备份日志文件的输出路径，如果不需要记录备份日志也可以不勾选，设置完后，单击“下一步”，如下图。
<img alt=" " src={useBaseUrl('docimg/sql定时备份17.png')} />
* 在弹出的“完成该向导”的对话框中确认备份计划信息无误后，单击“完成”按钮，之后系统开始创建计划。如下图：  

<img alt=" " src={useBaseUrl('docimg/sql定时备份18.png')} />
<img alt=" " src={useBaseUrl('docimg/sql定时备份19.png')} />
* 之后在维护计划下就可以看到创建备份计划了（如果没有请刷新列表），如下图：
<img alt=" " src={useBaseUrl('docimg/sql定时备份20.png')} />
#### 手动还原
* 点击 “开始”–“所有程序”–“Microsoft SQL Server 2008”–“启动SQL Server Management Studio”登录数据库。如下图：  

<img alt=" " src={useBaseUrl('docimg/sql手动还原1.png')} />
<img alt=" " src={useBaseUrl('docimg/sql手动还原2.png')} />
* 在“数据库”文件夹上单击右键，在弹出的快捷菜单中选择“还原数据库”，如下图：
<img alt=" " src={useBaseUrl('docimg/sql手动还原3.png')} />
* 在“还原数据库”对话框中，设置相关的还原参数。先选择要还原的数据库备份文件。选择“源设备”，再单击文件选择按钮，如下图：  
<img alt=" " src={useBaseUrl('docimg/sql手动还原4.png')} />
* 在弹出的“指定设备”对话框中单击“添加”按钮，如下图：
<img alt=" " src={useBaseUrl('docimg/sql手动还原5.png')} />
* 在弹出的文件选择对话框中找到要还原的数据库备份文件，选择后单击“确定”按钮，如下图：
<img alt=" " src={useBaseUrl('docimg/sql手动还原6.png')} />
<img alt=" " src={useBaseUrl('docimg/sql手动还原7.png')} />
* 在“还原数据库”对话框中，先勾选要还原的备份集，然后在“目标数据库”框中输入还原后的数据库名称，如下图：  
<img alt=" " src={useBaseUrl('docimg/sql手动还原8.png')} />
* 如果要修改还原后数据库文件和日志文件的存放路径，可以如下操作。先单击选择页列表中的“选项”，切换到选项设置页面，然后分别设置数据库文件和日志文件的存放路径。如下图：
<img alt=" " src={useBaseUrl('docimg/sql手动还原9.png')} />
* 参数设置好后，单击“确定”按钮，系统开始执行数据库还原。还原成功后会弹出确认对话框，单击“确定”按钮后，还原操作结束。如下图：  
<img alt=" " src={useBaseUrl('docimg/sql手动还原10.png')} />
* 还原结束后，可以在数据库树节点中看到还原后的数据库，如下图：
<img alt=" " src={useBaseUrl('docimg/sql手动还原11.png')} />
## MongDB
#### 手动备份
* 先运行Windows 命令行程序，如下图：  

<img alt=" " src={useBaseUrl('docimg/mgo手动备份1.png')} />
<img alt=" " src={useBaseUrl('docimg/mgo手动备份2.png')} />
* 将目录调整到MongoDB 的 bin 目录下，如下图：cd d:\Program Files\MongoDB\Server\3.4\bin
<img alt=" " src={useBaseUrl('docimg/mgo手动备份3.png')} />
* 执行备份命令，命令格式说明：

```
D:\MongoDB x64\bin>mongodump -h 127.0.0.1 -d imarchive -o e:\
mongodump -h 127.0.0.1 -d imarchive -o D:\mongoDB\data\backup\
```
mongodump 		--------- 备份命令
-h 127.0.0.1	--------- 待备份数据库服务器IP地址，或者主机名
-d imarchive		--------- 待备份数据库名称
-o D:\mongoDB\data\backup\ ------ 数据库备份到的输出路径  
```
3.4以上有验证的 mongodump -h 127.0.0.1 -u admin -p=adminiDong -d imekb -o d:\HF --authenticationDatabase admin
```
-u mongo登陆用户名
-p mongo登陆密码

:::warning 注意
 imarchive（归档数据库）、imekb（社交数据库）、imfilestore（文件数据库），要执行命令三次
:::warning 注意  

<img alt=" " src={useBaseUrl('docimg/mgo手动备份4.png')} />
<img alt=" " src={useBaseUrl('docimg/mgo手动备份5.png')} />  

* 备份成功后会在指定的目录下生成一个和数据库名称相同的文件夹，如下图：
<img alt=" " src={useBaseUrl('docimg/mgo手动备份6.png')} />
#### 定时备份
* 先制作备份的批处理文件，即将上面手动备份的命令编写到一个.bat 文件中。如下图：
<img alt=" " src={useBaseUrl('docimg/mgo定时备份1.png')} />
* 然后新建一个Windows 的计划任务，定时执行此批处理文件，关于Windows 计划任务的创建请参看新建[Windows计划任务章节](#jhrw)。
#### 手动还原
* 运行Windows 命令行程序，如下图：  

<img alt=" " src={useBaseUrl('docimg/mgo手动还原1.png')} />
<img alt=" " src={useBaseUrl('docimg/mgo手动还原2.png')} />
* 将目录调整到MongoDB 的 bin 目录下，执行还原命令，如下图：
<img alt=" " src={useBaseUrl('docimg/mgo手动还原3.png')} />
<img alt=" " src={useBaseUrl('docimg/mgo手动还原4.png')} />  

命令格式说明：

```
mongorestore -h 127.0.0.1 -d imekb2 --drop D:\mongoDB\data\backup\imekb
```
mongorestore	----------- 还原命令
-h 127.0.0.1	----------- 还原的目标服务器IP地址
-d imekb2		----------- 还原的目标数据库名称
--drop 		----------- 标识先将目标数据库中对应数据集的内容清空
D:\mongoDB\data\backup\imekb ------------- 还原的数据库文件存放路径
//3.4以上有验证的  
```
mongorestore -h 127.0.0.1 -u admin -p=admin+iDong -d imarchive --drop C:\Users\li.jian\Desktop\德阳燃气\更新\20170619更新\mongo导出\imarchive --authenticationDatabase admin
```
-u mongo登陆用户名
-p mongo登陆密码

:::warning 注意
 imarchive（归档数据库）、imekb（社交数据库）、imfilestore（文件数据库），要执行命令三次，还原之后注意多重启服务，确定可以归档作业组。 
:::warning 注意  

<img alt=" " src={useBaseUrl('docimg/mgo手动还原5.png')} />

#### <span id="jhrw">Windows计划任务</span>
* 任务计划，可以将任何脚本、程序或文档安排在某个时间运行。“任务计划”在每次启动windows系统的时候自动启动（默认Task Scheduler服务是开启的）并在后台运行。
使用“任务计划”可以完成以下任务：
    + 计划让任务在每天、每星期、每月或某些时刻（例如系统启动时）运行。
    + 更改任务的计划。
    + 停止计划的任务。
    + 自定义某个任务在某个时刻的运行方式。  

以下以Window 7 演示创建任务计划：
点击“开始→控制面板→系统和安全→管理工具→计划任务”。就可以看到“任务计划”的选项。如下图：  

<img alt=" " src={useBaseUrl('docimg/计划任务1.png')} />
<img alt=" " src={useBaseUrl('docimg/计划任务2.png')} />
* 选择“操作”区域的“创建基本任务”。如下图：
<img alt=" " src={useBaseUrl('docimg/计划任务3.png')} />
* 在弹出的“创建基本任务”对话框中输入要创建的基本任务的名称、描述信息，然后单击 “下一步”。如下图：
<img alt=" " src={useBaseUrl('docimg/计划任务4.png')} />
* 在弹出的“任务触发器”对话框中，根据需要设置触发的时间。设置后单击 “下一步”。如下图：
<img alt=" " src={useBaseUrl('docimg/计划任务5.png')} />
* 在弹出的对话框中设置具体触发的时间点。设置后单击 “下一步”。如下图：
<img alt=" " src={useBaseUrl('docimg/计划任务6.png')} />
* 在弹出的“操作”设置对话框中设置希望执行的操作。例如选择 “启动程序”，然后单击 “下一步”。如下图：
<img alt=" " src={useBaseUrl('docimg/计划任务7.png')} />
* 在弹出的“启动程序”对话框中设置要执行的程序。点击“浏览”按钮，从操作系统中选择要执行的程序。选择后单击 “下一步”。  

<img alt=" " src={useBaseUrl('docimg/计划任务8.png')} />
<img alt=" " src={useBaseUrl('docimg/计划任务9.png')} />
<img alt=" " src={useBaseUrl('docimg/计划任务10.png')} />
* 创建好后，单击“完成”。如下图：
<img alt=" " src={useBaseUrl('docimg/计划任务11.png')} />
## 知识库附件
#### 备份
知识库附件使用的是文件目录管理，缺省路径位于EOC部署路径下，如“C:\inetpub\wwwroot\ekbfilelibrary”，在imgenius服务和IIS服务停止后直接通过备份“ekbfilelibrary”路径下所有文件即可
<img alt=" " src={useBaseUrl('docimg/知识库备份.png')} />
#### 还原
在imgenius服务和IIS服务关闭的情况下，将文件复制到缺省路径位于EOC部署路径下，如“C:\inetpub\wwwroot\ekbfilelibrary”，
